# git-manager

./: .commit-msg.txt  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
.cursor/: mcp.json
.cursor/rules/: bajie-mcp.mdc
docs/: PROPOSAL.md
electron/: ai-handlers.ts  main.ts  preload.ts  report-handlers.ts
scripts/: build-icon.mjs  postbuild-electron.mjs  prebuild-clean.mjs  smoke-rebase.mjs
server/: git-service.ts  index.ts  routes.test.ts  routes.ts
server/services/: _helpers.ts  ai.service.ts  blame.service.ts  branch.service.ts  conflict.service.ts  log.service.ts  patch.service.ts  rebase.service.test.ts  rebase.service.ts  remote.service.test.ts  remote.service.ts  repo.service.ts  report.service.ts  stash.service.ts  status.service.ts  submodule.service.ts
server/utils/: git-rebase-editor.ts  (+2 more)
shared/: command-manifest.ts  types.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: blame.rs  branch.rs  commit.rs  diff.rs  log.rs  merge.rs  mod.rs  remote.rs  repo.rs  stash.rs
src-tauri/src/git/: blame_engine.rs  branch_manager.rs  diff_engine.rs  log_walker.rs  merge_engine.rs  mod.rs  remote_ops.rs  repository.rs  stash_manager.rs
src-tauri/src/models/: blame_info.rs  branch_info.rs  commit_info.rs  diff_info.rs  file_status.rs  mod.rs
(+89 files in other folders)
