[package]
name = "git-manager"
version = "0.1.0"
description = "IDEA-Style Git Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "git_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
notify-debouncer-mini = "0.5"
parking_lot = "0.12"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
regex = "1"
